--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -13,7 +13,7 @@
     </header>
 
     <footer>
-        <div class="centered-text">Best School</div>
+        <div class="footer-text">Best School</div>
     </footer>
 </body>
 </html>
