--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -19,14 +19,14 @@
           <h4>California, Arizona...</h4>
           <ul class="popover">
             <li>
-              <h2>Arizona</h2>
+              <h2>Arizona:</h2>
               <ul>
                 <li>Page</li>
                 <li>Page2</li>
               </ul>
             </li>
             <li>
-              <h2>California</h2>
+              <h2>California:</h2>
               <ul>
                 <li>San Francisco</li>
                 <li>Los Altos</li>
@@ -38,12 +38,13 @@
           <h3>Amenities</h3>
           <h4>Internet, Kitchen...</h4>
           <ul class="popover">
-            <li>Fake Amenity 1</li>
-            <li>Fake Amenity 2</li>
-            <li>Fake Amenity 3</li>
+            <li>Internet</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Iron</li>
           </ul>
         </div>
-        <button>Search</button>
+        <button class="search">Search</button>
       </section>
     </div>
     <footer>
