--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <head>
     <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/5-filters.css">
     <link rel="icon" type="image/png" href="images/icon.png">
   </head>
   <body>
