--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -22,7 +22,7 @@
           <h3>Amenities</h3>
           <h4>Internet, Kitchen...</h4>
         </div>
-        <button>Search</button>
+        <button class="search">Search</button>
       </section>
     </div>
     <footer>
