--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -49,45 +49,47 @@
       </section>
       <section class="places">
         <h1>Places</h1><br>
-        <article>
-          <h2>My home</h2>
-          <div class="price_by_night">$60</div>
-          <div class="information">
-            <div class="max_guest"><p class="caption">2 Guests</p></div>
-            <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
-            <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
-          </div>
-          <div class="user">
-            <b>Owner:</b> fake text
-          </div>
-          <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It locates at the center of Shanghai and next to subway line 1. 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</div>
-        </article>
-        <article>
-          <h2>Tiny house</h2>
-          <div class="price_by_night">$60</div>
-          <div class="information">
-            <div class="max_guest"><p class="caption">2 Guests</p></div>
-            <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
-            <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
-          </div>
-          <div class="user">
-            <b>Owner:</b> fake text
-          </div>
-          <div class="description">Pulvinar etiam non quam lacus. Est velit egestas dui id ornare arcu odio ut sem. Tempor orci eu lobortis elementum. Proin nibh nisl condimentum id venenatis a condimentum vitae. Arcu felis bibendum ut tristique et egestas quis ipsum suspendisse. Ipsum consequat nisl vel pretium lectus quam. Lacinia at quis risus sed vulputate. Pellentesque elit eget gravida cum sociis natoque penatibus. Dui faucibus in ornare quam viverra. Orci eu lobortis elementum nibh tellus molestie nunc non. Orci eu lobortis elementum nibh.</div>
-        </article>
-        <article>
-          <h2>A suite</h2>
-          <div class="price_by_night">$60</div>
-          <div class="information">
-            <div class="max_guest"><p class="caption">2 Guests</p></div>
-            <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
-            <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
-          </div>
-          <div class="user">
-            <b>Owner:</b> fake text
-          </div>
-          <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At lectus urna duis convallis convallis. Sagittis aliquam malesuada bibendum arcu. Nunc lobortis mattis aliquam faucibus purus in. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Bibendum ut tristique et egestas quis. Duis ut diam quam nulla porttitor. </div>
-        </article>
+        <div class="article">
+          <article>
+              <h2>My home</h2>
+              <div class="price_by_night">$60</div>
+            <div class="information">
+              <div class="max_guest"><p class="caption">2 Guests</p></div>
+              <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
+              <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
+            </div>
+            <div class="user">
+              <p><b>Owner: </b> John Lennon</p>
+            </div>
+            <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It locates at the center of Shanghai and next to subway line 1. 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</div>
+          </article>
+          <article>
+            <h2>Tiny house</h2>
+            <div class="price_by_night">$60</div>
+            <div class="information">
+              <div class="max_guest"><p class="caption">2 Guests</p></div>
+              <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
+              <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
+            </div>
+            <div class="user">
+              <p><b>Owner: </b> Adrienne</p>
+            </div>
+            <div class="description">Pulvinar etiam non quam lacus. Est velit egestas dui id ornare arcu odio ut sem. Tempor orci eu lobortis elementum. Proin nibh nisl condimentum id venenatis a condimentum vitae. Arcu felis bibendum ut tristique et egestas quis ipsum suspendisse. Ipsum consequat nisl vel pretium lectus quam. Lacinia at quis risus sed vulputate. Pellentesque elit eget gravida cum sociis natoque penatibus. Dui faucibus in ornare quam viverra. Orci eu lobortis elementum nibh tellus molestie nunc non. Orci eu lobortis elementum nibh.</div>
+          </article>
+          <article>
+            <h2>A suite</h2>
+            <div class="price_by_night">$190</div>
+            <div class="information">
+              <div class="max_guest"><p class="caption">2 Guests</p></div>
+              <div class="number_rooms"><p class="caption">1 Bedroom</p></div>
+              <div class="number_bathrooms"><p class="caption">1 Bathroom</p></div>
+            </div>
+            <div class="user">
+              <p><b>Owner: </b> Jason Biggs</p>
+            </div>
+            <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At lectus urna duis convallis convallis. Sagittis aliquam malesuada bibendum arcu. Nunc lobortis mattis aliquam faucibus purus in. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Bibendum ut tristique et egestas quis. Duis ut diam quam nulla porttitor. </div>
+          </article>
+        </div>
       </section>
     </div>
     <footer>
